update release version

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             losses = 0;
             guess = 10;
             userGuess = "";
+            computerGuess ="";
 
         }
         else if (userGuess === computerGuess) {       
